collega tramite axios la index con il json fornito da api.php

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <title>Dischi in Php</title>
   </head>
   <body>
-    <div id="app">{{ message }}</div>
+    <div id="app">
+      <h1>DISCHI</h1>
+    </div>
     <script src="js/main.js"></script>
   </body>
 </html>
