--- a/index.html
+++ b/index.html
@@ -21,7 +21,11 @@
   </head>
   <body>
     <div id="app">
-      <header></header>
+      <header>
+        <div class="container">
+          <img src="img/logo.png" alt="logo" />
+        </div>
+      </header>
       <main>
         <div class="container">
           <div class="wrapped">
