--- a/index.html
+++ b/index.html
@@ -24,12 +24,24 @@
       <header>
         <div class="container">
           <img src="img/logo.png" alt="logo" />
+          <form>
+            <div class="form-group lens">
+              <span class="fa fa-search form-control-feedback"></span>
+              <input
+                type="text"
+                class="form-control shadow-none w-auto"
+                placeholder="Cerca Album per Titolo"
+                v-model="searchTitle"
+                @keyup="filteredList"
+              />
+            </div>
+          </form>
         </div>
       </header>
       <main>
         <div class="container">
           <div class="wrapped">
-            <div class="disc" v-for="disc in discs">
+            <div class="disc" v-for="disc in filteredDiscs">
               <img :src="disc.poster" :alt="disc.title" />
               <h5 class="mt-2">{{disc.title}}</h5>
               <span class="my-2">{{disc.author}}</span>
