--- a/index.html
+++ b/index.html
@@ -25,14 +25,22 @@
         <div class="container">
           <img src="img/logo.png" alt="logo" />
           <form>
-            <div class="form-group lens">
+            <div class="form-group lens me-5">
               <span class="fa fa-search form-control-feedback"></span>
               <input
                 type="text"
                 class="form-control shadow-none w-auto"
                 placeholder="Cerca Album per Titolo"
                 v-model="searchTitle"
-                @keyup="filteredList"
+              />
+            </div>
+            <div class="form-group lens">
+              <span class="fa fa-search form-control-feedback"></span>
+              <input
+                type="text"
+                class="form-control shadow-none w-auto"
+                placeholder="Cerca Album per Autore"
+                v-model="searchAuthor"
               />
             </div>
           </form>
@@ -41,7 +49,17 @@
       <main>
         <div class="container">
           <div class="wrapped">
-            <div class="disc" v-for="disc in filteredDiscs">
+            <div
+              class="disc"
+              v-for="disc in filteredTitle"
+              v-if="searchTitle.length > 0"
+            >
+              <img :src="disc.poster" :alt="disc.title" />
+              <h5 class="mt-2">{{disc.title}}</h5>
+              <span class="my-2">{{disc.author}}</span>
+              <h5>{{disc.year}}</h5>
+            </div>
+            <div class="disc" v-for="disc in filteredAuthor" v-else>
               <img :src="disc.poster" :alt="disc.title" />
               <h5 class="mt-2">{{disc.title}}</h5>
               <span class="my-2">{{disc.author}}</span>
